--- a/frontend/src/css/account.css
+++ b/frontend/src/css/account.css
@@ -25,13 +25,12 @@
 .schedules-container{
     padding: .6rem .50rem;
     font-size: 1.1rem ;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-column-gap: 1.5rem;
-    grid-row-gap: 1.5rem;
+    display: flex;
+    flex-direction: column;
 }
-.schedule-date{
-    border-bottom: 2px solid var(--green);
+.schedule-wrap{
+    display: grid;
+    grid-template-columns: 2fr 5fr;
 }
 .schedule-timings{
     display: grid;
