--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -8,13 +8,17 @@
 }
 .header-section{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 10%;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-column-gap: 3%;
     width: 100%;
+    min-height: 20vh;
 }
 .header-section img{
+    width: 100%;
+    aspect-ratio: 1;
     border: 2px solid var(--blue);
     border-radius: 15px;
+    object-fit: contain;
 }
 .header-section .info{
     display: flex;
@@ -25,6 +29,7 @@
 }
 .header-section .info .first, .header-section .info .second{
     display: flex;
+    justify-content: left;
 }
 .header-section .info .first .gender{
     font-weight: 700;
@@ -41,6 +46,7 @@
     align-items: center;
     gap: 3rem;
     transition: all 0.3s ease-in-out;
+    /* z-index: -9; */
 }
 .header-section .booking-container:hover{
     border: 2px solid var(--blue);
@@ -53,7 +59,7 @@
     width: fit-content;
     padding: 0.5rem 1.3rem;
     border-radius: 11px;
-    z-index: 999;
+    /* z-index: 0; */
 }
 .profile-section{
     /* border: 2px solid red; */
@@ -97,6 +103,7 @@
 .schedules-container{
     display: flex;
     flex-direction: column;
+    gap: .7rem;
 }
 .schedule-wrap{
     display: grid;
@@ -107,4 +114,53 @@
 }
 .schedule-time{
     width: fit-content;
+    cursor: pointer;
+}
+.reviews-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.2rem;
+}
+.review-box{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.review-box .review-text{
+    display: grid;
+    grid-template-columns: 10fr 2fr;
+    /* grid-row-gap: 10fr; */
+}
+.review-box .review-text textarea{
+    padding: 0.5rem;
+    border: 2px solid rgba(0, 0, 0, 0.247);
+    border-radius: 4px;
+    border-bottom-right-radius: 15px;
+}
+.review-box .review-text textarea:focus{
+    border: 2px solid rgba(0, 0, 0, 0.247);
+    /* background-color: aqua; */
+    border: 2px solid var(--green);
+    /* border-radius: 4px; */
+    /* border-bottom-right-radius: 15px; */
+}
+.review-box .review-text button{
+    background-color: var(--blue);
+    border-radius: 5px;
+    color: white;
+}
+.reviews-container{
+    border: 2px solid rgba(0, 0, 0, 0.363);
+    border-radius: 5px;
+    height: 35rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    padding: 0 1rem;
+    padding-top: 1rem;
+    overflow: auto;
 }
