--- a/frontend/src/css/modal.css
+++ b/frontend/src/css/modal.css
@@ -1,10 +1,14 @@
 .overlay {
-  position: fixed;
+  /* position: fixed;
+  width: 100%;
+  height: 100%; */
+  backdrop-filter: blur(10px);
+  /* background-color: yellow; */
+  position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
-  /* backdrop-filter: invert(1%); */
-  /* backdrop-filter: blur(10px); */
-  /* background-color: black !important; */
 }
 .modalContainer {
   min-width: 45%;
