--- a/frontend/src/css/userAccount.css
+++ b/frontend/src/css/userAccount.css
@@ -3,6 +3,7 @@
     font-size: 1.1rem ;
     display: grid;
     grid-template-columns: 3fr 7fr;
+    grid-column-gap: 1rem;
 }
 .user-account .left{
     padding: 5rem 3.50rem;
@@ -22,4 +23,49 @@
     object-fit: cover;
     border-radius: 50%;
     aspect-ratio: 1/1;
+}
+.user-account .left .name{
+    font-size: 1.8rem;
+    font-weight: 300;
+}
+.user-account .left .username{
+    color: rgba(0, 0, 0, 0.486);
+    font-size: 1.4rem;
+    font-weight: 300;
+}
+.user-account .right h2{
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+}
+.user-account .right .table{
+    border-radius: 15px;
+    padding: 1rem;
+    font-size: 1.4rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1.5rem;
+    background-color: rgba(15,125,255,0.09);
+}
+.user-account .right .table .header{
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+.user-account .right .table .row{
+    display: grid;
+    grid-template-columns: repeat( 3, 2fr) 1fr;
+    grid-row-gap: 1rem;
+    width: 100%;
+}
+.user-account .right .table .row .username{
+    text-decoration: underline;
+}
+.user-account .right .table .row .nav{
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: var(--green);
+    transition: all 0.3s ease-in-out;
+}
+.user-account .right .table .row .nav:hover{
+    font-size: 2.1rem;
 }
