--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -1,162 +1,166 @@
-.hero{
-    background-color: white;
-    display: flex;
-    margin-bottom: 8rem;
-    /* max-height: 5vmin; */
-  }
-  .hero .hero-text-box{
-    /* border: 2px solid red; */
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    align-content: center;
-    justify-content: center;
-    /* justify-content: space-around; */
-    row-gap: 50px;
-    padding: 0px 40px;
-  }
-  .hero .hero-text-box h1{
-    font-size: 2.5rem;
-    font-weight: 500;
-  }
-  .hero-sub-text{
-    font-size: 1.3rem;
-    /* font-weight: 100; */
-    color: rgba(0, 0, 0, 0.615);
-    text-align: left;
-  }
-  .hero .hero-text-box button{
-    background-color: var(--green);
-    color: white;
-    font-size: 1.3rem;
-    padding: 10px 20px;
-    border-radius: 15px;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: .5rem;
-  }
-  .hero .hero-img-box{
-    /* border: 2px solid red; */
-    width: 50%;
-    padding: 0px 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap: 7rem;
-    /* width: 30rem; */
-    /* padding: 0px 57px; */
-  }
-  .hero .hero-img-box img{
-    /* border: 2px solid rgb(0, 255, 106); */
-    width: 100%;
-    /* height: 55%; */
-    object-fit: contain;
-  }
-  .hero .hero-img-box .hero-img-row-2{
-    /* border: 2px solid rgb(234, 255, 0); */
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    column-gap: 1rem;
-    /* width: 20rem; */
-  }
-  .hero .hero-img-box .hero-img-row-2 img{
-    width: 50%;
-    object-fit: contain;
-    /* padding: 10px 30px; */
-  }
-  .section{
-    width: 100%;
-    padding: 5rem 0;
-    display: flex;
-    justify-content: center;
-  }
-   .section-text-box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-   .section-text-box h3{
-    margin: 0;
-    margin-bottom: 1.5rem;
-    font-size: 2.2rem;
-    font-weight: 500;
-  }
-   .section-text-box .section-sub-text{
-    /* border: 2px solid red; */
-    font-size: 1.3rem;
-    /* font-weight: 100; */
-    color: rgba(0, 0, 0, 0.615);
-    text-align: center;
-    width: 40%;
-    /* font-size: 2.2rem; */
-    /* font-weight: 500; */
-  }
-   .section-content{
-    display: flex;
-    margin-top: 5rem;
-    /* justify-content: center; */
-    align-content: center;
-    padding: 0 7rem;
-  }
-   .section-content .box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1.6rem;
-    width: 50%;
-    /* border: 2px solid red; */
-  }
-   .section-content .box img{
-    border-radius: 25px;
-    width: 12.5rem;
-    height: 13rem;
-    object-fit: cover;
-  }
-   .section-content .box .box-heading{
-    width: 18rem;
-    font-size: 1.5rem;
-    font-weight: 300;
-  }
-   .section-content .box .box-text{
-    font-size: 1.3rem;
-    color: rgba(0, 0, 0, 0.615);
-    text-align: center;
-  }
-   .section-content .box button{
-    background-color: var(--green);
-    color: white;
-    font-size: 1.3rem;
-    padding: 10px 20px;
-    border-radius: 15px;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-  }
-  .service{
-    background-color: #CFFAD3;
-  }
-   .section-content .box .box-heading a{
-    width: 14rem;
-    font-size: 1.5rem;
-    font-weight: 300;
-    text-decoration: none;
-    color: black;
-  }
-   .section-content .box .box-heading a:hover{
-    text-decoration: underline;
-  }
-  .community-forum{
-    background-color: #039ae533;
-  }
-  
+.hero {
+  background-color: white;
+  display: flex;
+  margin-bottom: 8rem;
+}
+.hero .hero-text-box {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  row-gap: 50px;
+  padding: 0px 40px;
+}
+.hero .hero-text-box h1 {
+  font-size: 2.5rem;
+  font-weight: 500;
+}
+.hero-sub-text {
+  font-size: 1.3rem;
+  color: rgba(0, 0, 0, 0.615);
+  text-align: left;
+}
+.hero .hero-text-box button {
+  background-color: var(--green);
+  color: white;
+  font-size: 1.3rem;
+  padding: 10px 20px;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
+}
+.hero .hero-img-box {
+  width: 50%;
+  padding: 0px 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 7rem;
+}
+.hero .hero-img-box img {
+  width: 100%;
+  object-fit: contain;
+}
+.hero .hero-img-box .hero-img-row-2 {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  column-gap: 1rem;
+}
+.hero .hero-img-box .hero-img-row-2 img {
+  width: 50%;
+  object-fit: contain;
+}
+.section {
+  width: 100%;
+  padding: 5rem 0;
+  display: flex;
+  justify-content: center;
+}
+.section-text-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-text-box h3 {
+  margin: 0;
+  margin-bottom: 1.5rem;
+  font-size: 2.2rem;
+  font-weight: 500;
+}
+.section-text-box .section-sub-text {
+  font-size: 1.3rem;
+  color: rgba(0, 0, 0, 0.615);
+  text-align: center;
+  width: 40%;
+}
+.section-content {
+  display: flex;
+  margin-top: 5rem;
+  align-content: center;
+  padding: 0 7rem;
+}
+.section-content .box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.6rem;
+  width: 50%;
+}
+.section-content .box img {
+  border-radius: 25px;
+  width: 12.5rem;
+  height: 13rem;
+  object-fit: cover;
+}
+.section-content .box .box-heading {
+  width: 18rem;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+.section-content .box .box-text {
+  font-size: 1.3rem;
+  color: rgba(0, 0, 0, 0.615);
+  text-align: center;
+}
+.section-content .box button {
+  background-color: var(--green);
+  color: white;
+  font-size: 1.3rem;
+  padding: 10px 20px;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+}
+.service, .faq {
+  background-color: #CFFAD3;
+}
+.section-content .box .box-heading a {
+  width: 14rem;
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-decoration: none;
+  color: black;
+}
+.section-content .box .box-heading a:hover {
+  text-decoration: underline;
+}
+.community-forum {
+  background-color: #039ae533;
+}
+.find{
+  margin-top: 5rem;
+}
+.faq .accordion{
+  margin-top: 5rem;
+  padding: 0 12%;
+}
+.accordion-style{
+  border: none !important;
+  border-right: 7px solid rgba(0, 64, 255, 0.753) !important;
+  margin: 1.5rem 0;
+  padding: 0.5rem;
+  border-radius: 10px;
+}
+.accordionsummary-style{
+  background-color: white !important;
+}
+.typography-style{
+  font-size: 1.4rem !important;
+}
+.detail-typography-style{
+  font-size: 1.2rem !important;
+  text-align: left;
+}
