--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -153,14 +153,14 @@
     color: white;
 }
 .reviews-container{
-    border: 2px solid rgba(0, 0, 0, 0.363);
+    /* border: 2px solid rgba(0, 0, 0, 0.363); */
+    background-color: rgba(25, 117, 230, 0.25);
     border-radius: 5px;
-    height: 35rem;
+    max-height: 35rem;
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    padding: 0 1rem;
-    padding-top: 1rem;
+    padding: 1rem ;
     overflow: auto;
 }
