--- a/frontend/src/css/review-card.css
+++ b/frontend/src/css/review-card.css
@@ -1,12 +1,8 @@
 .review-card{
-    border: 2px solid var(--blue);
+    background-color: white;
     border-radius: 15px;
     width: 100%;
     padding: .5rem 0.9rem;
-    /* padding: .5rem .4rem ; */
-    /* display: flex;
-    flex-direction: column;
-    flex-wrap: wrap; */
     display: grid;
     grid-template-columns: 1fr 9fr;
     grid-column-gap: 1rem;
