--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,6 +22,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 8rem;
+  font-size: 1.4rem;
 }
 .active{
   border-bottom: 3px solid var(--green);
