--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,14 +2,16 @@
 .App {
   text-align: center;
 }
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 :root {
   --blue: rgb(0, 64, 255);
   --green: #05FF00;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
 body {
@@ -17,50 +19,30 @@ body {
   margin: 0;
   padding: 0;
 }
-.page{
+.page {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 8rem;
   font-size: 1.4rem;
 }
-.active{
+.active {
   border-bottom: 3px solid var(--green);
   padding: 5px 10px;
   opacity: 1 !important;
-  /* transition: 0.5 ease-in-out; */
 }
-.max-width{
+.max-width {
   max-width: 1500px;
 }
-
-/* input{
-  width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.233);
-  border-radius: 5px;
-  padding: 5.3rem  12.2rem;
-}
-input:focus{
-  outline: none !important;
-  border: 1px solid var(--green);
-  box-shadow: 0 0 10px #719ECE;
-} */
-/* .find-a-doctor .autocomplete-tab .tab-box:first-child {
-  border: 2px solid var(--blue);
-  width: 25% !important;
-}
-.find-a-doctor .autocomplete-tab .tab-box:nth-child(2) {
-  border: 2px solid var(--green);
-  width: 45% !important;
-} */
 
 @media (max-width: 1080px) {
   .main-nav {
     height: 8rem;
     grid-template-columns: 2rem 3fr 3fr 1fr 2rem;
   }
-  
-  .logo, .menu-link ul, .social-media ul {
+  .logo,
+  .menu-link ul,
+  .social-media ul {
     height: 8rem;
   }
 }
@@ -70,25 +52,22 @@ input:focus{
     height: 7rem;
     grid-template-columns: 1fr 3fr 2rem 2rem;
   }
-
-  .menu-link, .log-in-button{
+  .menu-link,
+  .log-in-button {
     display: none;
   }
-
-  .logo, .social-media ul {
+  .logo,
+  .social-media ul {
     height: 7rem;
   }
-
-  .logo img{
+  .logo img {
     width: 100%;
   }
-
   .mobile-menu-link {
     grid-column: 2/4;
     position: relative;
     z-index: 99;
   }
-
   .mobile-menu-link {
     background-color: white;
     height: 20rem;
@@ -101,7 +80,6 @@ input:focus{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
       rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   }
-
   .mobile-menu-link ul {
     height: 20rem;
     display: flex;
@@ -109,11 +87,9 @@ input:focus{
     flex-direction: column;
     align-items: start;
   }
-
   .mobile-menu-link ul li:first-child {
     transition-delay: 0.2s;
   }
-
   .social-media {
     grid-row: 1/2;
     grid-column: 3/5;
@@ -121,14 +97,12 @@ input:focus{
     align-items: center;
     transition: all 2s linear;
   }
-
   .social-media {
     height: 7rem;
     display: flex;
     justify-self: end;
     align-items: center;
   }
-
   .social-media .hamburger-menu {
     display: block;
     font-size: 2.5rem;
@@ -140,18 +114,15 @@ input:focus{
     height: 6rem;
     grid-template-columns: 1fr 3fr 1rem;
   }
-
   .logo {
     height: 6rem;
   }
-
   .social-media {
     height: 6rem;
     display: flex;
     justify-self: end;
     align-items: center;
   }
-
   .social-media .hamburger-menu {
     display: block;
     font-size: 2.5rem;
@@ -163,22 +134,18 @@ input:focus{
     height: 6rem;
     grid-template-columns: 1rem 4fr 1fr 1fr 1rem;
   }
-
-  .logo{
+  .logo {
     height: 6rem;
   }
-
   .logo h2 {
     font-size: 2rem;
   }
-
   .social-media {
     height: 6rem;
     display: flex;
     justify-self: end;
     align-items: center;
   }
-
   .social-media .hamburger-menu {
     display: block;
     font-size: 2.5rem;
