--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -143,6 +143,10 @@
 .find{
   margin-top: 5rem;
 }
+.faq{
+  display: flex;
+  flex-direction: column;
+}
 .faq .accordion{
   margin-top: 5rem;
   padding: 0 12%;
