--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -22,6 +22,21 @@
     padding: 0.5rem 1rem;
     box-shadow: 0px 0px 255px -255px rgba(0,0,0,1), 25px 0px 20px -20px rgba(0,0,0,0.45), 0px 25px 20px -20px rgba(0,0,0,0.45), -25px 0px 20px -20px rgba(0,0,0,0.45);
   }
+  .login-form .doc-check-box {
+    padding: 1rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .login-form .doc-check-box p{
+    /* padding: 1rem 0; */
+    /* display: flex; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* gap: 1rem; */
+    font-size: 1.1rem !important;
+  }
   .login-form .column input{
     border: none;
     font-size: 1.2rem;
