--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -81,11 +81,11 @@
 .profile-section .section-content{
     margin: 0;
     padding: 0 1.62rem;
-    font-size: 1.4rem;
+    font-size: 1.4rem !important;
     text-align: left;
     /* border: 2px solid blue; */
 }
-.specialization-container, .schedule-timings{
+.specialization-container , .schedule-timings{
     display: flex;
     flex-wrap: wrap;
     gap: .6rem;
@@ -95,6 +95,10 @@
     color: white;
     padding: 0.4rem .8rem;
     border-radius: 9px;
+    font-size: 1.4rem !important;
+}
+.section-content p{
+    font-size: 1.4rem !important;
 }
 .education-container{
     display: flex;
